--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "vite": "^7.1.12"
   },
   "eslintConfig": {
     "extends": [
