--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.0",
     "gh-pages": "^6.1.1",
     "vite": "^7.1.12"
   },
